--- a/1-game/index.html
+++ b/1-game/index.html
@@ -58,6 +58,6 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-route.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-animate.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.9/angular-touch.min.js"></script>
-      <script src="scritp.js"></script>
+      <script src="script.js"></script>
 </body>
 </html>
