--- a/2-game/crossword.html
+++ b/2-game/crossword.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crucigrama</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="crossword.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css">
 </head>
 <body>
@@ -38,6 +38,6 @@
         <h3 v-show="false">Cargando....</h3>
       </div>
       <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
-      <script src="script.js"></script>
+      <script src="crossword.js"></script>
 </body>
 </html>
