--- a/3-game/tictac.html
+++ b/3-game/tictac.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-tac-toe</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="tictac.css">
 </head>
 <body>
     <div class="wrapper">
@@ -42,6 +42,6 @@
         
       </div>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-      <script src="script.js"></script>
+      <script src="tictac.js"></script>
 </body>
 </html>
