add spinner loading

--- a/main/main.html
+++ b/main/main.html
@@ -67,9 +67,9 @@
       <div class="mask">
         <div class="container d-flex align-items-center justify-content-center text-center h-100">
           <div class="text-white">
-            <h1 class="mb-3">Aprende jugando y fotalece tu memoria</h1>
+            <h1 class="mb-3">Aprende jugando y fortalece tu memoria</h1>
             <h5 class="mb-4">Juega online o sin conexion</h5>
-            <a class="btn btn-outline-light btn-lg m-2" href="" role="button" rel="nofollow">Elige uno</a>
+            <a class="btn btn-outline-light btn-lg m-2" href="" role="button" rel="nofollow">Elige un juego</a>
           </div>
         </div>
       </div>
@@ -78,6 +78,11 @@
   </header>
   <!-- MDB -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
+  <script>
+     function disableBack() { window.history.forward(); }
+        setTimeout("disableBack()", 0);
+        window.onunload = function () { null };
+  </script>
 </body>
 
 </html>
