project phase static files

--- a/main/main.html
+++ b/main/main.html
@@ -7,12 +7,12 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <title>Learn by playing!</title>
   <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet" />
+  <link href="../assets/css/all.min.css" rel="stylesheet" />
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+  <link href="../assets/css/css.css" rel="stylesheet" />
   <!-- MDB -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="main.css">
+  <link href="../assets/css/mdb.1.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 
 <body>
@@ -69,7 +69,7 @@
           <div class="text-white">
             <h1 class="mb-3">Aprende jugando y fortalece tu memoria</h1>
             <h5 class="mb-4">Juega online o sin conexion</h5>
-            <a class="btn btn-outline-light btn-lg m-2" href="" role="button" rel="nofollow">Elige un juego</a>
+            <a class="btn btn-outline-light btn-lg m-2" href="../menu/menu.html" role="button" rel="nofollow">Elige un juego</a>
           </div>
         </div>
       </div>
@@ -77,7 +77,7 @@
     <!-- Close Background image -->
   </header>
   <!-- MDB -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
+  <script type="text/javascript" src="../assets/js/mdb.min.js"></script>
   <script>
      function disableBack() { window.history.forward(); }
         setTimeout("disableBack()", 0);
