--- a/2-game/crossword.html
+++ b/2-game/crossword.html
@@ -1,43 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crucigrama</title>
-    <link rel="stylesheet" href="crossword.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Crucigrama</title>
+  <link rel="stylesheet" href="../assets/css/crossword.css">
+  <link rel="stylesheet" href="../assets/css/bootstrap.css">
 </head>
+
 <body>
-    <div id="app" class="container" @keyup.escape="selected = undefined">
-        <div class="table-container" style="display:none;" v-show="true">
-          <div class="timer">{{cronometro}}</div>
-          <div class="mensaje" v-if="mensaje !== undefined">
-            <div class="content">{{mensaje}}</div>
-            <button @click="mensaje = undefined" class="btn btn-primary">OK</button>
-          </div> 
-          <table>
-            <tr v-for="(row, y) in matrix" :key="y">
-              <td v-for="(cell, x) in row" :class="{empty: cell.empty, start: !!cell.start, selected: cell.words.includes(selected)}" @click="selectWord(cell.start)">
-                <label v-if="!!cell.start">{{cell.start}}</label>
-                {{cell.words.some(i => completed[i]) ? cell.letter : ' '}}
-              </td>
-            </tr>
-          </table>
-          <div v-if="selected !== undefined" style="text-align: center;">
-            <p class="pista" v-if="pista">
-              {{pista}}
-            </p>
-            <input v-model="answer" ref="input" @keyup.enter="corregir"/>
-            <button @click="corregir" class="btn btn-primary">Colocar</button>
-            <button @click="solucion" class="btn btn-danger">Pista</button>
-          </div>
-          <hr>
-          <button class="btn btn-block btn-primary" @click="finalizar">Finalizar</button>
-        </div>  
-        <h3 v-show="false">Cargando....</h3>
+  <div id="app" class="container" @keyup.escape="selected = undefined">
+    <div class="table-container" style="display:none;" v-show="true">
+      <div class="timer">{{cronometro}}</div>
+      <div class="mensaje" v-if="mensaje !== undefined">
+        <div class="content">{{mensaje}}</div>
+        <button @click="mensaje = undefined" class="btn btn-primary">OK</button>
       </div>
-      <script src="https://unpkg.com/vue@2.6.14/dist/vue.js"></script>
-      <script src="crossword.js"></script>
+      <table>
+        <tr v-for="(row, y) in matrix" :key="y">
+          <td v-for="(cell, x) in row"
+            :class="{empty: cell.empty, start: !!cell.start, selected: cell.words.includes(selected)}"
+            @click="selectWord(cell.start)">
+            <label v-if="!!cell.start">{{cell.start}}</label>
+            {{cell.words.some(i => completed[i]) ? cell.letter : ' '}}
+          </td>
+        </tr>
+      </table>
+      <div v-if="selected !== undefined" style="text-align: center;">
+        <p class="pista" v-if="pista">
+          {{pista}}
+        </p>
+        <input v-model="answer" ref="input" @keyup.enter="corregir" />
+        <button @click="corregir" class="btn btn-primary">Colocar</button>
+        <button @click="solucion" class="btn btn-danger">Pista</button>
+      </div>
+      <hr>
+      <button class="btn btn-block btn-primary" @click="finalizar">Finalizar</button>
+    </div>
+    <h3 v-show="false">Cargando....</h3>
+    <a href="../menu/menu.html" class="button green">Volver al menú</a>
+
+  </div>
+  <script src="../assets/js/vue.js"></script>
+  <script src="../assets/js/crossword.js"></script>
 </body>
+
 </html>
