add font local file

--- a/menu/menu.html
+++ b/menu/menu.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 class="title">Opciones de juegos</h1>
+    <h1 class="title">Opciones de algunos juegos</h1>
 
     <div id="app" class="container">
         <a href="../1-game/memorama.html">
