--- a/main/main.html
+++ b/main/main.html
@@ -13,6 +13,9 @@
   <!-- MDB -->
   <link href="../assets/css/mdb.1.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="../assets/css/main.css">
+  <script src="../script.js"></script>
+  <link rel="manifest" href="../manifest.json">
+  
 </head>
 
 <body>
