stable version missing lighthouse

--- a/main.html
+++ b/main.html
@@ -7,14 +7,14 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <title>Learn by playing!</title>
   <!-- Font Awesome -->
-  <link href="../assets/css/all.min.css" rel="stylesheet" />
+  <link href="./assets/css/all.min.css" rel="stylesheet" />
   <!-- Google Fonts -->
-  <link href="../assets/css/css.css" rel="stylesheet" />
+  <link href="./assets/css/css.css" rel="stylesheet" />
   <!-- MDB -->
-  <link href="../assets/css/mdb.1.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="../assets/css/main.css">
-  <script src="../script.js"></script>
-  <link rel="manifest" href="../manifest.json">
+  <link href="./assets/css/mdb.1.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="./assets/css/main.css">
+  <link rel="manifest" href="./manifest.json">
+  <script src="script.js"></script>
   
 </head>
 
@@ -34,16 +34,16 @@
         <div class="collapse navbar-collapse" id="navbarExample01">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="#intro">Acerca</a>
+              <a class="nav-link" aria-current="page" href="#about">Acerca</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="" rel="nofollow" target="_blank">FAQ</a>
+              <a class="nav-link" href="#questions" rel="nofollow" >FAQ</a>
             </li>
 
           </ul>
 
-          <ul class="navbar-nav d-flex flex-row">
-            <!-- Icons -->
+          <!-- <ul class="navbar-nav d-flex flex-row">
+             Icons 
             <li class="nav-item me-3 me-lg-0">
               <a class="nav-link" href="" rel="nofollow" target="_blank">
                 <i class="fab fa-youtube"></i>
@@ -59,7 +59,7 @@
                 <i class="fab fa-twitter"></i>
               </a>
             </li>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </nav>
@@ -72,7 +72,7 @@
           <div class="text-white">
             <h1 class="mb-3">Aprende jugando y fortalece tu memoria</h1>
             <h5 class="mb-4">Juega online o sin conexion</h5>
-            <a class="btn btn-outline-light btn-lg m-2" href="../menu/menu.html" role="button" rel="nofollow">Elige un juego</a>
+            <a class="btn btn-outline-light btn-lg m-2" href="menu.html" role="button" rel="nofollow">Elige un juego</a>
           </div>
         </div>
       </div>
@@ -80,7 +80,7 @@
     <!-- Close Background image -->
   </header>
   <!-- MDB -->
-  <script type="text/javascript" src="../assets/js/mdb.min.js"></script>
+  <script type="text/javascript" src="./assets/js/mdb.min.js"></script>
   <script>
      function disableBack() { window.history.forward(); }
         setTimeout("disableBack()", 0);
