--- a/memorama.html
+++ b/memorama.html
@@ -6,13 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Memorama</title>
-  <link rel="stylesheet" href="../assets/css/memorama.css">
+  <link rel="stylesheet" href="./assets/css/memorama.css">
   <!-- Font Awesome -->
-  <link rel="stylesheet" href="../assets/css/all.min.css">
+  <link rel="stylesheet" href="./assets/css/all.min.css">
   <!-- Google Fonts -->
-  <link rel="stylesheet" href="../assets/css/font.css">
+  <link rel="stylesheet" href="./assets/css/font.css">
   <!-- MDB -->
-  <link rel="stylesheet" href="../assets/css/mdb.min.css">
+  <link rel="stylesheet" href="./assets/css/mdb.min.css">
+  <link rel="manifest" href="./manifest.json">
+  <script src="script.js"></script>
 </head>
 
 <body>
@@ -44,17 +46,17 @@
       </div>
 
     </div>
-    <a href="../menu/menu.html" class="button green">Volver al menú</a>
+    <a href="menu.html" class="button green">Volver al menú</a>
 
   </main>
 
-  <script src="../assets/js/jquery.min.js"></script>
-  <script src="../assets/js/jquery.flip.min.js"></script>
-  <script src="../assets/js/angular.min.js"></script>
-  <script src="../assets/js/angular-route.min.js"></script>
-  <script src="../assets/js/angular-animate.min.js"></script>
-  <script src="../assets/js/angular-touch.min.js"></script>
-  <script src="../assets/js/memorama.js"></script>
+  <script src="./assets/js/jquery.min.js"></script>
+  <script src="./assets/js/jquery.flip.min.js"></script>
+  <script src="./assets/js/angular.min.js"></script>
+  <script src="./assets/js/angular-route.min.js"></script>
+  <script src="./assets/js/angular-animate.min.js"></script>
+  <script src="./assets/js/angular-touch.min.js"></script>
+  <script src="./assets/js/memorama.js"></script>
 </body>
 
 </html>
