--- a/menu.html
+++ b/menu.html
@@ -6,27 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-    <link rel="stylesheet" href="../assets/css/menu.css">
+    <link rel="stylesheet" href="./assets/css/menu.css">
 </head>
 
 <body>
     <h1 class="title">Opciones de algunos juegos</h1>
 
     <div id="app" class="container">
-        <a href="../1-game/memorama.html">
-            <card data-image="../assets/img/card-img-1.jpg">
+        <a href="memorama.html">
+            <card data-image="./assets/img/card-img-1.jpg">
                 <h1 slot="header">Memorama</h1>
                 <p slot="content">Elije dos cartas y termina el juego</p>
             </card>
         </a>
-        <a href="../2-game/crossword.html">
-            <card data-image="../assets/img/card-img-2.png">
+        <a href="crossword.html">
+            <card data-image="./assets/img/card-img-2.png">
                 <h1 slot="header">Crucigrama</h1>
                 <p slot="content">Acompleta las palabras dentro del los recuadros</p>
             </card>
         </a>
-        <a href="../3-game/tictac.html">
-            <card data-image="../assets/img/card-img-3.png">
+        <a href="tictac.html">
+            <card data-image="./assets/img/card-img-3.png">
                 <h1 slot="header">Tic tac</h1>
                 <p slot="content">Juega contra el sistema</p>
             </card>
@@ -36,8 +36,8 @@
     <p slot="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
   </card> -->
     </div>
-    <script src="../assets/js/vue.min.js"></script>
-    <script src="../assets/js/menu.js"></script>
+    <script src="./assets/js/vue.min.js"></script>
+    <script src="./assets/js/menu.js"></script>
 </body>
 
 </html>
