--- a/tictac.html
+++ b/tictac.html
@@ -6,7 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tic-tac-toe</title>
-  <link rel="stylesheet" href="../assets/css/tictac.css">
+  <link rel="stylesheet" href="./assets/css/tictac.css">
+  <link rel="manifest" href="./manifest.json">
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -42,12 +44,12 @@
 
     <div class="resetButton hide">Play again?</div>
 
-    <a href="../menu/menu.html" class="button green">Volver al menú</a>
+    <a href="menu.html" class="button green">Volver al menú</a>
 
 
   </div>
-  <script src="../assets/js/jquery2.1.3.min.js"></script>
-  <script src="../assets/js/tictac.js"></script>
+  <script src="./assets/js/jquery2.1.3.min.js"></script>
+  <script src="./assets/js/tictac.js"></script>
 </body>
 
 </html>
