--- a/crossword.html
+++ b/crossword.html
@@ -6,8 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crucigrama</title>
-  <link rel="stylesheet" href="../assets/css/crossword.css">
-  <link rel="stylesheet" href="../assets/css/bootstrap.css">
+  <link rel="stylesheet" href="./assets/css/crossword.css">
+  <link rel="stylesheet" href="./assets/css/bootstrap.css">
+  <link rel="manifest" href="./manifest.json">
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -40,11 +42,11 @@
       <button class="btn btn-block btn-primary" @click="finalizar">Finalizar</button>
     </div>
     <h3 v-show="false">Cargando....</h3>
-    <a href="../menu/menu.html" class="button green">Volver al menú</a>
+    <a href="menu.html" class="button green">Volver al menú</a>
 
   </div>
-  <script src="../assets/js/vue.js"></script>
-  <script src="../assets/js/crossword.js"></script>
+  <script src="./assets/js/vue.js"></script>
+  <script src="./assets/js/crossword.js"></script>
 </body>
 
 </html>
