--- a/crossword.html
+++ b/crossword.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crucigrama</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/favicon-16x16.png">
   <link rel="stylesheet" href="./assets/css/crossword.css">
   <link rel="stylesheet" href="./assets/css/bootstrap.css">
   <link rel="manifest" href="./manifest.json">
