--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                 <div class="progress"></div>
             </div>
         </div>
-        <script src="./assets/js/script.js"></script>
+    </div>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
