--- a/menu.html
+++ b/menu.html
@@ -9,6 +9,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="./assets/icons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/favicon-16x16.png">
+    <link rel="manifest" href="./manifest.json">
+    <script src="script.js"></script>
     <link rel="stylesheet" href="./assets/css/menu.css">
 </head>
 
