--- a/main.html
+++ b/main.html
@@ -9,9 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="./assets/icons/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/favicon-16x16.png">
-  <!-- Font Awesome -->
   <link href="./assets/css/all.min.css" rel="stylesheet" />
-  <!-- Google Fonts -->
   <link href="./assets/css/css.css" rel="stylesheet" />
   <link href="./assets/css/mdb.1.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="./assets/css/main.css">
@@ -45,7 +43,7 @@
       </div>
     </nav>
 
-    <!-- Open Background image -->
+    <!-- Background image -->
     <div id="intro" class="bg-image shadow-2-strong">
       <div class="mask">
         <div class="container d-flex align-items-center justify-content-center text-center h-100">
