add notifications random pwa[APIs]

--- a/menu.html
+++ b/menu.html
@@ -41,6 +41,8 @@
 
     <div>
         <button class="button-9" role="button" type="button" id="addapp">Descarga nuestra aplicación</button>
+
+        <button class="button-9" role="button" type="button" id="notification">Descarga nuestra aplicación</button>
     </div>
         
 
