--- a/menu.html
+++ b/menu.html
@@ -42,7 +42,7 @@
     <div>
         <button class="button-9" role="button" type="button" id="addapp">Descarga nuestra aplicación</button>
 
-        <button class="button-9" role="button" type="button" id="notification">Descarga nuestra aplicación</button>
+        <button class="button-9" role="button" type="button" id="notification">Click para notificaciónes</button>
     </div>
         
 
@@ -70,6 +70,16 @@
             });
         });
     </script>
+
+<script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+<script>
+  window.OneSignal = window.OneSignal || [];
+  OneSignal.push(function() {
+    OneSignal.init({
+      appId: "1ed8cd49-ba97-4a7d-9508-834db4d3b2ad",
+    });
+  });
+</script>
 </body>
 
 </html>
