--- a/menu.html
+++ b/menu.html
@@ -57,11 +57,11 @@
         addapp = document.getElementById("addapp");
         addapp.addEventListener("click", (e) => {
             addapp.style.display = "none"; 
-            deferredPrompt.prompt();
+            //deferredPrompt.prompt();
             deferredPrompt.userChoice.then((choiceResult) => {
                 if (choiceResult.outcome === 'accepted') {
                     console.log("instalado");
-                    /* addapp.style.display = "none"; */
+                     addapp.style.display = "none";
                 }
                 else {
                     console.log("No se instalo");
